--- a/portfolio.html
+++ b/portfolio.html
@@ -198,6 +198,15 @@
 	    				<div class="text-center" style="height:20px;width:80%;background-color:#EC7063 ;border-radius: 5px;">80%</div>
 	    			</div>
 	    	</div>
+		    
+		    <-- CHanges -------------->
+		    <div>
+	    		<label class="skilllab">Ms Office</label>
+	    			<div style="background-color:#D7DBDD;border-radius:5px;margin-bottom: 20px;">
+	    				<div class="text-center" style="height:20px;width:80%;background-color:#EC7063 ;border-radius: 5px;">80%</div>
+	    			</div>
+	    	</div>
+			    
 	    </div>
 	</div>
 </div>
