--- a/portfolio.html
+++ b/portfolio.html
@@ -193,15 +193,15 @@
 	    			</div>
 	    	</div>
 	    	<div>
-	    		<label class="skilllab">Ms Office</label>
+	    		<label class="skilllab">Content Creation</label>
 	    			<div style="background-color:#D7DBDD;border-radius:5px;margin-bottom: 20px;">
 	    				<div class="text-center" style="height:20px;width:80%;background-color:#EC7063 ;border-radius: 5px;">80%</div>
 	    			</div>
 	    	</div>
 		    
-		    <-- CHanges -------------->
+		    <!-- CHanges -------------->
 		    <div>
-	    		<label class="skilllab">Ms Office</label>
+	    		<label class="skilllab">Reactjs</label>
 	    			<div style="background-color:#D7DBDD;border-radius:5px;margin-bottom: 20px;">
 	    				<div class="text-center" style="height:20px;width:80%;background-color:#EC7063 ;border-radius: 5px;">80%</div>
 	    			</div>
