--- a/portfolio.html
+++ b/portfolio.html
@@ -203,7 +203,7 @@
 		    <div>
 	    		<label class="skilllab">Reactjs</label>
 	    			<div style="background-color:#D7DBDD;border-radius:5px;margin-bottom: 20px;">
-	    				<div class="text-center" style="height:20px;width:80%;background-color:#EC7063 ;border-radius: 5px;">80%</div>
+	    				<div class="text-center" style="height:20px;width:80%;background-color:#AE4567 ;border-radius: 5px;">80%</div>
 	    			</div>
 	    	</div>
 			    
