--- a/portfolio.html
+++ b/portfolio.html
@@ -151,7 +151,7 @@
 	    			</div>
 	    	</div>
 	    	<div>
-	    		<label class="skilllab">Dreamviewer</label>
+	    		<label class="skilllab">C Langauge</label>
 	    			<div style="background-color:#D7DBDD;border-radius:5px;">
 	    				<div class="text-center" style="height:20px;width:80%;background-color:#5DADE2;border-radius: 5px;">80%</div>
 	    			</div>
@@ -169,7 +169,7 @@
 	    			</div>
 	    	</div>
 	    	<div>
-	    		<label class="skilllab">Graphics</label>
+	    		<label class="skilllab">Reactjs</label>
 	    			<div style="background-color:#D7DBDD;border-radius:5px;">
 	    				<div class="text-center" style="height:20px;width:72%;background-color:#5DADE2;border-radius: 5px;">74%</div>
 	    			</div>
@@ -181,7 +181,7 @@
 	    			</div>
 	    	</div>
 	    	<div>
-	    		<label class="skilllab">MySql</label>
+	    		<label class="skilllab">Sql</label>
 	    			<div style="background-color:#D7DBDD;border-radius:5px;">
 	    				<div class="text-center" style="height:20px;width:85%;background-color:#27AE60;border-radius: 5px;">85%</div>
 	    			</div>
@@ -197,16 +197,7 @@
 	    			<div style="background-color:#D7DBDD;border-radius:5px;margin-bottom: 20px;">
 	    				<div class="text-center" style="height:20px;width:80%;background-color:#EC7063 ;border-radius: 5px;">80%</div>
 	    			</div>
-	    	</div>
-		    
-		    <!-- CHanges -------------->
-		    <div>
-	    		<label class="skilllab">Reactjs</label>
-	    			<div style="background-color:#D7DBDD;border-radius:5px;margin-bottom: 20px;">
-	    				<div class="text-center" style="height:20px;width:80%;background-color:#AE4567 ;border-radius: 5px;">80%</div>
-	    			</div>
-	    	</div>
-			    
+	    	</div>    
 	    </div>
 	</div>
 </div>
