--- a/portfolio.html
+++ b/portfolio.html
@@ -193,11 +193,17 @@
 	    			</div>
 	    	</div>
 	    	<div>
-	    		<label class="skilllab">Content Creation</label>
+	    		<label class="skilllab">OOPs</label>
 	    			<div style="background-color:#D7DBDD;border-radius:5px;margin-bottom: 20px;">
 	    				<div class="text-center" style="height:20px;width:80%;background-color:#EC7063 ;border-radius: 5px;">80%</div>
 	    			</div>
 	    	</div>    
+		  <div>
+	    		<label class="skilllab">Content Creation</label>
+	    			<div style="background-color:#D7DBDD;border-radius:5px;margin-bottom: 20px;">
+	    				<div class="text-center" style="height:20px;width:70%;background-color:#AR3478 ;border-radius: 5px;">80%</div>
+	    			</div>
+	    	</div>   
 	    </div>
 	</div>
 </div>
