--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,7 @@
 		  <div>
 	    		<label class="skilllab">Content Creation</label>
 	    			<div style="background-color:#D7DBDD;border-radius:5px;margin-bottom: 20px;">
-	    				<div class="text-center" style="height:20px;width:70%;background-color:#AN5978 ;border-radius: 5px;">80%</div>
+	    				<div class="text-center" style="height:20px;width:70%;background-color:#27AE60 ;border-radius: 5px;">80%</div>
 	    			</div>
 	    	</div>   
 	    </div>
