--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 			<img src="img/logo.png" class="img-fluid profile-img"></div>
 			<div class="float-left logo-txt" >
 				<h1>Shivom</h1>
-				<h3>Web Developer</h3>	
+				<h3>Software Developer</h3>	
 			    <div class="text-center">
                 <ul type="none" class="mylist">
                 	<a href="mailto:shivomthakur38@gmail.com" target="_blank"><li class="contact-img float-left"></li></a>
@@ -52,7 +52,7 @@
 				</tr>
 				<tr>
 					<td>Role:</td>
-					<td>Web Developer</td>
+					<td>Software Developer</td>
 				</tr>
 				<tr>
 					<td>Qualification:</td>
@@ -68,7 +68,7 @@
 				</tr>
 				<tr>
 					<td>Location:</td>
-					<td>Ghaziabad</td>
+					<td>Noida</td>
 				</tr>
 			</table>	
 		</div>
@@ -153,7 +153,7 @@
 	    	<div>
 	    		<label class="skilllab">C Langauge</label>
 	    			<div style="background-color:#D7DBDD;border-radius:5px;">
-	    				<div class="text-center" style="height:20px;width:80%;background-color:#5DADE2;border-radius: 5px;">80%</div>
+	    				<div class="text-center" style="height:20px;width:90%;background-color:#5DADE2;border-radius: 5px;">80%</div>
 	    			</div>
 	    	</div>
 	    	<div>
