--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
 				<h2 class="headingtool">About Me</h2>
 			</div>
 			<div class="paradiv">
-			<p class="aboutmepara">Hello welcome to my blog.I am Shivom.I am doing Masters in Computer Application from Abes Engineering College.I have done my Bachelor's in Computer Application from Kurukshetra University.My goal and also dream is to be a Front End Developer,design and develop websites.I have good knowledge in the field of web development and always like to pursue my career in this field.I have all the required technical skills.Html5, Css3, Bootstrap, Wordpress, Javascript, php, mysql some are my technical proficiency.I am a hard working and goal oriented personality.Time management mean lot to me and never compromise with it and always try to be more puntual.I am good learner and adapt myself according to situations.	
+			<p class="aboutmepara">Hello welcome to my portfolio page.I am a computer science student doing Masters in Computer Application.I am a reliable and goal-oriented individual looking to work as software developer. Offering expertise in web technologies and programming.Html5, Css3, reactjs, mysql ,C lang. some are my technical proficiency.I am a hard working and goal oriented personality.Time management mean lot to me and i always try to be puntual.Interested in advancing a career as a Software Developer where I can apply my technical skills to fulfil the clients requirements and contributes in company's growth.	
 			</p>
 		</div>
 		</div>
