--- a/portfolio.html
+++ b/portfolio.html
@@ -334,11 +334,10 @@
 		<div class="col-sm-12 col-lg-4 col-md-4 foot">
 			<h4 style="color: white; text-align: center;">Address</h4>
 			<ul type="none" style="color: white;text-align: center;">
-				<li>Sh-47</li>
-				<li>Shastri Nagar</li>
-				<li>near police station</li>
+				<li>NH 24</li>
+				<li>19th KM Stone</li>
 				<li>Ghaziabad,UP</li>
-				<li>200102</li>
+				<li>201009</li>
 			</ul>
 		</div>
 	<div class="text-center col-sm-12" style="color:white;padding-bottom: 5px;">Copyright &copy 2020|Shivom</div>
