--- a/portfolio.html
+++ b/portfolio.html
@@ -322,7 +322,7 @@
 	<div class="row">
 		<div class="col-sm-12 col-lg-4 col-md-4 foot text-center" style="padding-bottom: 20px;">
 			<h4 style="color: white; text-align: center;">Download Resume</h4>
-			<a href="img/shivomresume.pdf" download target="_blank"><button type="button" class="btn btn-primary" style="margin-top:10px;">Resume</button></a>
+			<a href="img/Shivom Resume New.pdf" download target="_blank"><button type="button" class="btn btn-primary" style="margin-top:10px;">Resume</button></a>
 		</div>
 		<div class="col-sm-12 col-lg-4 col-md-4 foot">
 			<h4 style="color: white; text-align: center;">Contact</h4>
