--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 	<header class="header clearfix">
 		<div class="container">
 		<div class="headdiv float-left">
-			<img src="img/logo.png" class="img-fluid profile-img"></div>
+			<img src="img/logo_s.png" class="img-fluid profile-img"></div>
 			<div class="float-left logo-txt" >
 				<h1>Shivom</h1>
 				<h3>Software Developer</h3>	
