--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
                 	<a href="mailto:shivomthakur38@gmail.com" target="_blank"><li class="contact-img float-left"></li></a>
                     <a href="https://www.linkedin.com/in/shivom-thakur/" target="_blank"><li class="contact-img1 float-left "></li></a>
                     <a href="https://www.facebook.com/shivom.tomar" target="_blank"><li class="contact-img2 float-left "></li></a>
-                    <a href="tel:8059956916"><li class="contact-img3 float-left "></li></a>
+                    <a href="https://github.com/shiv0412"><li class="contact-img3 float-left "></li></a>
                 </div>
               
             </div>             
