--- a/portfolio.html
+++ b/portfolio.html
@@ -110,9 +110,9 @@
 		<div class="col-sm-12 col-md-3 col-lg-3 edudiv">
 			<img src="img/star.png" class="img-fluid float-left">
 			<ul type="none" class="float-left">
-				<li>MCA*</li>
+				<li>MCA</li>
 				<li>Aktu University</li>
-				<li>With 87%</li>
+				<li>With 90%</li>
 			</ul>
 		</div>
 
@@ -186,6 +186,12 @@
 	    				<div class="text-center" style="height:20px;width:85%;background-color:#27AE60;border-radius: 5px;">85%</div>
 	    			</div>
 	    	</div>
+		    <div>
+	    		<label class="skilllab">MERN</label>
+	    			<div style="background-color:#D7DBDD;border-radius:5px;">
+	    				<div class="text-center" style="height:20px;width:75%;background-color:#5DADE2;border-radius: 5px;">85%</div>
+	    			</div>
+	    	</div>
 	    	<div>
 	    		<label class="skilllab">Web Hosting</label>
 	    			<div style="background-color:#D7DBDD;border-radius:5px;">
@@ -203,7 +209,20 @@
 	    			<div style="background-color:#D7DBDD;border-radius:5px;margin-bottom: 20px;">
 	    				<div class="text-center" style="height:20px;width:70%;background-color:#27AE60 ;border-radius: 5px;">80%</div>
 	    			</div>
-	    	</div>   
+	    	</div>  
+		     <div>
+	    		<label class="skilllab">Dot Net Core</label>
+	    			<div style="background-color:#D7DBDD;border-radius:5px;margin-bottom: 20px;">
+	    				<div class="text-center" style="height:20px;width:70%;background-color:#5DADE2  ;border-radius: 5px;">80%</div>
+	    			</div>
+	    	</div>  
+		     <div>
+	    		<label class="skilllab">Azure Cloud</label>
+	    			<div style="background-color:#D7DBDD;border-radius:5px;margin-bottom: 20px;">
+	    				<div class="text-center" style="height:20px;width:60%;background-color:#EC7063  ;border-radius: 5px;">80%</div>
+	    			</div>
+	    	</div>  
+		    
 	    </div>
 	</div>
 </div>
