--- a/portfolio.html
+++ b/portfolio.html
@@ -245,7 +245,7 @@
         </div>
     </div>
 </div>
-		<div class="col-sm-12 col-md-6 col-lg-6 flipcont mobflipcont">
+		<div class="col-sm-12 col-md-6 col-lg-6 flipcont mobflipcont" style="margin-top:40px">
 	<div class="flip-card">
 		<div class="flip-card-inner">
 			<div class="flip-card-front">
