--- a/portfolio.html
+++ b/portfolio.html
@@ -231,7 +231,7 @@
 		<div class="col-sm-12 col-md-12 col-lg-12 projhead">
 			<h2 class="headingtool ">Projects</h2>
 	    </div>
-<div class="col-sm-12 col-md-6 col-lg-6 flipcont mobflipcont">
+<div class="col-sm-12 col-md-6 col-lg-6 flipcont mobflipcont" style="margin-top:40px">
 	<div class="flip-card">
 		<div class="flip-card-inner">
 			<div class="flip-card-front">
@@ -245,22 +245,6 @@
         </div>
     </div>
 </div>
-		<div class="col-sm-12 col-md-6 col-lg-6 flipcont mobflipcont">
-	<div class="flip-card">
-		<div class="flip-card-inner">
-			<div class="flip-card-front">
-				<img src="img/proj1.png" alt="Project.img" style="width:100%;height: 260px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-                <div class="prohead"><h3 class="text-center">Wordpress Website</h3></div>
-            </div>
-            <div class="flip-card-back">
-            	<h1 style="margin-top: 10px">Video Lectures</h1>
-                <p style="text-align: justify;padding:0px 10px 0px 10px; overflow: hidden;">The lockdown..its a lockdown invention i say.This is a wordpress website i develop for my class to watch video lectures,notes and all when all are stay at home.This website is design using elementor plugin for page building.Wp-forms plugin for contact forms.I also learn hosting from this project by successfully hosting it on godady.</p>
-            </div>
-        </div>
-    </div>
-</div>
-		
-		
 		<div class="col-sm-12 col-md-6 col-lg-6 flipcont mobflipcont" style="margin-top:40px">
 	<div class="flip-card">
 		<div class="flip-card-inner">
@@ -275,10 +259,26 @@
         </div>
     </div>
 </div>
+		
+		
+		<div class="col-sm-12 col-md-6 col-lg-6 flipcont mobflipcont">
+	<div class="flip-card">
+		<div class="flip-card-inner">
+			<div class="flip-card-front">
+				<img src="img/proj1.png" alt="Project.img" style="width:100%;height: 260px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                <div class="prohead"><h3 class="text-center">Wordpress Website</h3></div>
+            </div>
+            <div class="flip-card-back">
+            	<h1 style="margin-top: 10px">Video Lectures</h1>
+                <p style="text-align: justify;padding:0px 10px 0px 10px; overflow: hidden;">The lockdown..its a lockdown invention i say.This is a wordpress website i develop for my class to watch video lectures,notes and all when all are stay at home.This website is design using elementor plugin for page building.Wp-forms plugin for contact forms.I also learn hosting from this project by successfully hosting it on godady.</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 		
 
-<div class="col-sm-12 col-md-6 col-lg-6 flipcont" style="margin-top:40px">
+<div class="col-sm-12 col-md-6 col-lg-6 flipcont">
 	<div class="flip-card">
 		<div class="flip-card-inner">
 			<div class="flip-card-front">
