--- a/portfolio.html
+++ b/portfolio.html
@@ -231,7 +231,7 @@
 		<div class="col-sm-12 col-md-12 col-lg-12 projhead">
 			<h2 class="headingtool ">Projects</h2>
 	    </div>
-<div class="col-sm-12 col-md-6 col-lg-6 flipcont mobflipcont">
+<div class="col-sm-12 col-md-6 col-lg-6 flipcont mobflipcont flipcont_2">
 	<div class="flip-card">
 		<div class="flip-card-inner">
 			<div class="flip-card-front">
@@ -245,7 +245,7 @@
         </div>
     </div>
 </div>
-		<div class="col-sm-12 col-md-6 col-lg-6 flipcont mobflipcont">
+		<div class="col-sm-12 col-md-6 col-lg-6 flipcont mobflipcont flipcont_2">
 	<div class="flip-card">
 		<div class="flip-card-inner">
 			<div class="flip-card-front">
