--- a/portfolio.html
+++ b/portfolio.html
@@ -235,12 +235,12 @@
 	<div class="flip-card">
 		<div class="flip-card-inner">
 			<div class="flip-card-front">
-				<img src="img/proj1.png" alt="Project.img" style="width:100%;height: 260px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-                <div class="prohead"><h3 class="text-center">Wordpress Website</h3></div>
+				<img src="img/p3.png" alt="Project.img" style="width:100%;height: 260px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                <div class="prohead"><h3 class="text-center">MERN Stack Web App</h3></div>
             </div>
             <div class="flip-card-back">
             	<h1 style="margin-top: 10px">Video Lectures</h1>
-                <p style="text-align: justify;padding:0px 10px 0px 10px; overflow: hidden;">The lockdown..its a lockdown invention i say.This is a wordpress website i develop for my class to watch video lectures,notes and all when all are stay at home.This website is design using elementor plugin for page building.Wp-forms plugin for contact forms.I also learn hosting from this project by successfully hosting it on godady.</p>
+                <p style="text-align: justify;padding:0px 10px 0px 10px; overflow: hidden;">This is a MERN stack based web application which supports Restaurants business. Using the app restaurants can sell its products and offer services to a wider domain within their location in more efficient way.</p>
             </div>
         </div>
     </div>
