--- a/portfolio.html
+++ b/portfolio.html
@@ -239,8 +239,8 @@
                 <div class="prohead"><h3 class="text-center">MERN Stack Web App</h3></div>
             </div>
             <div class="flip-card-back">
-            	<h1 style="margin-top: 10px">Video Lectures</h1>
-                <p style="text-align: justify;padding:0px 10px 0px 10px; overflow: hidden;">This is a MERN stack based web application which supports Restaurants business. Using the app restaurants can sell its products and offer services to a wider domain within their location in more efficient way.</p>
+            	<h1 style="margin-top: 10px">MERN Stack Web App</h1>
+                <p style="text-align: justify;padding:0px 10px 0px 10px; overflow: hidden;">This is a MERN stack based web application which supports Restaurants business. Using the app restaurants can sell its products and offer services to a wider domain in more efficient way. The application offer features like table booking,making orders , tracking orders and a dedicated admin pannel to handle backend tasks for the restaurant.</p>
             </div>
         </div>
     </div>
